# myArcade

./: .codespellrc  .gitignore  CMakeLists.txt  CMakePresets.json  HACKING.md  Makefile  README.md  gamecontrollerdb.txt  note  scores.txt
.github/workflows/: ci.yml
cmake/: dev-mode.cmake  install-rules.cmake  lint.cmake  variables.cmake
docs/: package-lock.json
docs/content/: 0.index.md
docs/content/1.introduction/: 1.getting-started.md
docs/content/2.enum/: 1.enum_lib.md  2.enum_game.md  _dir.yml  enum_key.md
docs/content/3.class/: 1.IGraphicals.md  2.IGames.md  _dir.yml
docs/content/4.games/: 1.pacman.md  2.snake.md  3.theShow.md  _dir.yml
lib/games/: IGames.hpp
lib/games/menu/: GameMenu.cpp  GameMenu.hpp
lib/games/pacman/: GamePacman.cpp  GamePacman.hpp
lib/games/snake/: Board.cpp  Board.hpp  GameSnake.cpp  GameSnake.hpp
lib/games/theShow/: GameTheShow.cpp  GameTheShow.hpp
lib/graphicals/: IGraphics.hpp
lib/graphicals/ncurses/: LibNcurses.cpp  LibNcurses.hpp
lib/graphicals/sdl2/: LibSDL2.cpp  LibSDL2.hpp
lib/graphicals/sfml/: LibSfml.cpp  LibSfml.hpp
source/: Error.cpp  Error.hpp  GameCore.cpp  GameCore.hpp  lib.cpp  load_libs.cpp  main.cpp  my.hpp
test/: CMakeLists.txt
test/source/: arcade_test.cpp
